<?xml version="1.0"?>
<package>
  <name>manipulation2</name>
  <version>1.0.0</version>
  <description>
    unknown
  </description>
  <url type="website">http://sourceforge.net/projects/comps/</url>
  <url type="repository">https://github.com/personalrobotics/comps.git</url>
  <maintainer email="dberenson@cs.wpi.edu">Dmitry Berenson</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>openrave_catkin</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>openrave_catkin</run_depend>
</package>
